<resources>
    <string name="app_name">Carpital</string>

    <!--    string for splash screen-->
    <string name="buy_sell_save">Buy. Sell. Save.</string>

    <!--    strings for the onboarding screen-->
    <!--    Titles -->
    <string name="first_slide_title">Find Your Perfect Car</string>
    <string name="second_slide_title">Sell With Ease</string>
    <string name="third_slide_title">Get Accident Report</string>
    <string name="fourth_slide_title">Get Reviews</string>

    <!--    Descriptions-->
    <string name="first_slide_desc">Get the best deals for used cars around you</string>
    <string name="second_slide_desc">Create an advert in minutes and start selling from the comfort of your home</string>
    <string name="third_slide_desc">Get a free salvage report on any vehicle by simply entering the VIN</string>
    <string name="fourth_slide_desc">Read the latest reviews from unbiased experts and like-minded car owners.</string>

    <!--    Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="carpital">Carpital</string>
    <string name="skip">SKIP</string>
    <string name="login_welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="logo">logo</string>
    <string name="google_signin">Sign-in with Google</string>
    <string name="signup">Don\'t have an account? <font color='#4871DA'>SignUp</font></string>
    <string name="remember_me">Remember Me</string>
    <string name="create_account">Create \nAccount</string>
    <string name="name_client">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">NEXT</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">SUBMIT</string>
    <string name="otp_desc">Code has been sent to +111*****9999</string>
    <string name="close_button">close button</string>
    <string name="otp_image">otp image</string>
    <string name="verify_otp">Verify</string>
    <string name="login_small">Login</string>
    <string name="click_to_go_back">Click to go back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_details">Kindly provide the phone number for which you want to reset password</string>
    <string name="new_cred">Kindly enter a new password</string>
    <string name="make_selection">Make\nSelection</string>
    <string name="select_details">Select which contact detail we should use to reset your password</string>
    <string name="via_sms">via SMS:</string>
    <string name="via_email">via Email:</string>
    <string name="number_sms">+11111111111</string>
    <string name="email_mail">support@gmail.com</string>
    <string name="new_ncredentials">New\nCredentials</string>
    <string name="cred_desc">Your identity has been verified! Kindly create a new password.</string>
    <string name="password_nupdated">Password Updated</string>
    <string name="success_desc">Your account is now ready to use. Kindly login with the updated password</string>
    <string name="or">Or Continue With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="connect_btn">CONNECT</string>
    <string name="no_internet">No Internet</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="sell">Sell</string>
    <string name="salvage_report">Report</string>
    <string name="settings">Settings</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="find_a_car">Find a Car</string>
    <string name="settings_and_profile">Settings</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">UPDATE</string>
    <string name="sell_your_car">Sell Your Car</string>
    <string name="submit_listing">SUBMIT LISTING</string>
    <string name="choose_photo">Choose photo</string>
    <string name="kindly_add_car_photo_from_gallery">Kindly add car photo from gallery</string>
    <string name="amount">Amount</string>
    <string name="choose_car_category">Choose Car Category</string>
    <string name="choose_car_manufacture_year">Choose Car Manufacture Year</string>
    <string name="choose_car_make">Choose Car Make</string>
    <string name="add_vehicle_listing_in_a_matter_of_minutes">Add vehicle listing in a matter of minutes</string>
    <string name="choose_car_model">Choose Car Model</string>
    <string name="choose_location">Enter Location</string>
    <string name="get_vehicle_history">Get Vehicle Information</string>
    <string name="get_details_of_your_car_by_entering_its_vin">Get details of your car by entering its VIN</string>
    <string name="sample_vin">1GNALDEK9FZ108495</string>
    <string name="get_report">GET REPORT</string>
    <string name="clear_report">CLEAR REPORT</string>
    <string name="car_make">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="transmission">Transmission</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="go_home">GO HOME</string>
    <string name="kindly_go_to_the_home_page">Kindly go to the home page</string>
    <string name="success">Success</string>
    <string name="vehicle_search_history">Vehicle Search History</string>
    <string name="contact_me">Contact Me</string>
    <string name="for_enquiries_about_the_app_and_our_vehicle_listings_contact_me">For enquiries about the app and our vehicle listings contact me.</string>


</resources>