<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RecoverPasswordFragment"
    android:background="@color/white"
    android:padding="30dp"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_selection"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:fontFamily="@font/archivo_black"

        android:layout_marginTop="30dp"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_details"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/archivo"
        android:layout_marginTop="10dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selection_border"
        android:padding="20dp">

        <ImageView
            android:id="@+id/msg_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="20dp"
            android:src="@drawable/sms_icon"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/icon_background"
            />

        <TextView
            android:id="@+id/msg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/via_sms"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/archivo"
            android:layout_toEndOf="@+id/msg_icon"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/msg_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_sms"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/archivo_black"
            android:layout_toEndOf="@+id/msg_icon"
            android:layout_below="@+id/msg_txt"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/invisi_btn"
            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selection_border"
        android:padding="20dp">

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="20dp"
            android:src="@drawable/email_icon"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/icon_background"
            />

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/via_email"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/archivo"
            android:layout_toEndOf="@+id/email_icon"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/email_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_mail"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/archivo_black"
            android:layout_toEndOf="@+id/email_icon"
            android:layout_below="@+id/email_txt"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/invisi_btn"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

</LinearLayout>