<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgotPasswordFragment"
    android:background="@color/white"
    android:padding="30dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/reset"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:fontFamily="@font/archivo_black"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_details"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/archivo"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        app:startIconDrawable="@drawable/email_icon"
        app:endIconMode="clear_text"
        app:endIconTint="#000000"
        app:boxBackgroundColor="@color/boxColor"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="#000000" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/next"
        android:fontFamily="@font/archivo_black"
        android:background="@color/seed"
        android:letterSpacing="0.1"
        android:textColor="#fff"
        android:transitionName="transition_next_login"
        />




</LinearLayout>