<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OTPFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_button"
            android:padding="5dp"
            android:src="@drawable/close_icon"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/otp_image"
            android:layout_marginTop="30dp"
            android:src="@drawable/otp"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/otpDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_desc"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            android:fontFamily="@font/archivo_black"
            android:textAlignment="center"/>

<!--        <com.goodiebag.pinview.Pinview-->
<!--            android:layout_width=""-->
<!--            android:layout_height=""/>-->

        <com.chaos.view.PinView
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="#e8f1ff"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="50dp"
            app:lineColor="#eeeeee"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/verify_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/verify_otp"
            app:cornerRadius="10dp" />


    </LinearLayout>


</ScrollView>