<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoverPasswordSuccessFragment"
    android:background="@color/white"
    android:padding="30dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/success_icon"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_nupdated"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/archivo_black"
        android:layout_marginTop="10dp"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success_desc"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/archivo"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/go_to_login"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/archivo_black"
        android:background="@color/seed"
        android:letterSpacing="0.1"
        android:textColor="#fff"
        android:transitionName="transition_next_login"
        />




</LinearLayout>