<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupSecondActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/signup_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/back_icon"
        android:transitionName="back_arrow_btn"
        />

    <!--    <ImageView-->
    <!--        android:id="@+id/logoImg"-->
    <!--        android:layout_width="150dp"-->
    <!--        android:layout_height="150dp"-->
    <!--        android:src="@drawable/carpital_blue"-->
    <!--        android:contentDescription="@string/logo"-->
    <!--        android:layout_gravity="center"-->
    <!--        />-->

    <TextView
        android:id="@+id/signup_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="30sp"
        android:fontFamily="@font/archivo_black"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        android:transitionName="transition_title_text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        >

<!--        using dependency-->
        <com.hbb20.CountryCodePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="true"
            app:ccp_showFullName="true"
            android:background="@drawable/black_border"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="8dp"

            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            app:startIconDrawable="@drawable/phone_icon"
            app:startIconTint="#000000"
            app:endIconMode="clear_text"
            app:endIconTint="#000000"
            android:padding="0dp"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="#000000"/>

        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/next_signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/submit"
            android:fontFamily="@font/archivo_black"
            android:background="@color/seed"
            android:letterSpacing="0.1"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:transitionName="transition_next_login"

            />





    </LinearLayout>


</LinearLayout>